<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <LinearLayout
        android:id="@+id/cartt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey">

<LinearLayout
    android:id="@+id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:visibility="gone"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Cart is empty"/>
</LinearLayout>

        <LinearLayout
            android:visibility="visible"

            android:id="@+id/not_empty"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_margin="10dp"

                >
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/your_cart"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_cart"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:id="@+id/order_details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_order_details"/>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:background="@color/white"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical"

                >
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/restaurant_bill"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Restaurant Bill"/>

            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/item_total_text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/item_total"/>
                    <TextView
                        android:id="@+id/item_total"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="200"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/gst_text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/gst"/>
                    <TextView
                        android:id="@+id/gst"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="24"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:id="@+id/to_pay_text"
                        android:text="@string/to_pay"/>
                    <TextView
                        android:id="@+id/to_pay"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="224"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="bottom"

                >
                <Button
                    android:id="@+id/confirm_order"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/red"
                    android:text="Confirm Order"
                    android:textColor="@color/white"
                    android:textAllCaps="true"/>

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

</ScrollView>